Several Front-end fixes * added arrows on both sides of the main content sheet * prevent slide from overlapping the title division * changed behaviour of three column background construct (left arrow - stripe - right arrow) in order to avoid the horizontal scroll bar * fixed the position of scroll to top image

--- a/surface/css/joomla.css
+++ b/surface/css/joomla.css
@@ -25,7 +25,7 @@
 	font-family: arial, helvetica, sans-serif;
 	font-weight: bold;
 	text-align: left;
-	margin-left: 20px;
+	margin-left: 1%;
 	margin-top: 20px;
 	margin-bottom: 1em;
 	float: left;
