--- a/surface/css/shadow.css
+++ b/surface/css/shadow.css
@@ -67,7 +67,7 @@ box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.2);
 .StripeBackground {
 	-moz-box-shadow: 0.1px 1px 2px 0.5px #646467;
 	-webkit-box-shadow: 0.1px 1px 2px 0.5px #646467;
-	box-shadow: 0.1px 1px 2px 0.5px #646467;
+	box-shadow: 0px 20px 60px 0px #646467;
 }
 
 .StripeContent {
