--- a/surface/css/template.css
+++ b/surface/css/template.css
@@ -20,7 +20,6 @@ body {
 	position: absolute;
 	display: inline-block;
 	min-height: inherit;
-	min-width: 50em; /* Kann entfernt werden? */
 	z-index: 50;
 }
 
@@ -52,7 +51,7 @@ body {
 }
 
 .Title {
-	position: absolute;
+	float: left;
 	margin-top: 5em;
 	margin-left: 3%;
 	margin-bottom: 0.3em;
@@ -101,6 +100,7 @@ body {
 	min-width: 1080px;
 }
 
+
 .MainMenue {
 	clear: both;
 	position: relative;
@@ -114,23 +114,27 @@ body {
 
 .ArrowLeft {
 	position: absolute;
-	margin-top: 23em;
-	margin-left: 1em;
+	margin-left: 45px;
 	width: 0; 
 	height: 0;	 
 	border-top: 20px solid transparent;
 	border-bottom: 20px solid transparent; 
-	float:left;
+	z-index: 1;
+}
+
+.ArrowRight {
+	clear: both;
+	position: absolute;
+	width: 0; 
+	height: 0;	 
+	border-top: 20px solid transparent;
+	border-bottom: 20px solid transparent; 
 	z-index: 1;
 }
 
 .StripeBackground {
 	height: 40px;
-	width: 100%;
-	min-width: 50em;
-	position: absolute;
 	margin-top: 23em;
-	margin-left: 2.7em;
 	z-index:0;
 }
 
@@ -260,8 +264,9 @@ body {
 }
 
 .RightPicture {
-	margin-top: 2.5em;
-	margin-right: 2%;
+	clear: left;
+	margin-top: -11em;
+	margin-right: 2em;
 	width: 570px;
 	top: 60px;
 	height: 200px;
